--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -4,6 +4,10 @@
 @import "../font-persian/iransans/css/fontiran.css";
 @import "mixins";
 @import "variable";
-@import "public";
+@import "particular";
 @import "full-page";
+@import "public";
+@import "navigation";
+@import "home";
+@import "systems";
 
