--- a/assets/sass/_variable.scss
+++ b/assets/sass/_variable.scss
@@ -5,16 +5,17 @@ $X : 1200px;
 
 $small-font :1rem;
 $big-font :2rem;
-$color-violet :#C43E97;
+$color-violet :#f500a5;
 $color-gray :#696969;
 $color-dark:#000;
 $color-green:#00A67E;
 $color-loading:#ffe22a;
 
 /*=============key============*/
-$color-blue-key :#15A9FE;
-$color-dark-blue-key :#00366B;
+$color-blue :#2d346d;
+$color-dark-blue :#191d48;
 $color-green-key :#50D6B6;
+$color-pink :#d800e3;
 /*=============bootstrap============*/
 $modal-fade-transform: translate(0, 400px);
 
