--- a/assets/sass/_variable.scss
+++ b/assets/sass/_variable.scss
@@ -6,7 +6,7 @@ $X : 1200px;
 $small-font :1rem;
 $big-font :2rem;
 $color-violet :#f500a5;
-$color-gray :#696969;
+$color-gray :#76767b;
 $color-dark:#000;
 $color-green:#00A67E;
 $color-loading:#ffe22a;
