--- a/assets/sass/_connection.scss
+++ b/assets/sass/_connection.scss
@@ -33,7 +33,11 @@
       margin: 0 0 10px;
     }
     .connection-telegram{
-
+.icon-telegram{
+  width: 100%;
+  height: auto;
+  max-width: 30px;
+}
     }
   }
 }
