--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -4,6 +4,7 @@
 @import "../font-persian/iransans/css/fontiran.css";
 @import "mixins";
 @import "variable";
+@import "animate";
 @import "particular";
 @import "full-page";
 @import "public";
