--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13701,11 +13701,39 @@ textarea {
   min-width: 150px;
 }
 
+.box-activities {
+  width: 100%;
+  height: 100%;
+  padding-top: 67px;
+}
+.box-activities .wrap-activities {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+.box-activities .wrap-activities .background-activities {
+  text-align: left;
+  direction: ltr;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  bottom: 0;
+  left: 10%;
+}
+.box-activities .wrap-activities .background-activities svg {
+  height: 100%;
+}
+
 .box-slider {
   height: 100%;
   width: 100%;
+  padding-top: 67px;
   background: #fff url("../img/cloud.svg") no-repeat center center;
   background-size: cover;
+}
+.box-slider .wrap-slider {
+  height: 100%;
+  width: 100%;
 }
 
 .connection {
